# pyzernike

./: .gitignore  CMakeLists.txt  README.md  coefficients.inv  pyproject.toml
.github/workflows/: main.yml
lib/: Binomial.h  Factorial.h  LICENSE  ScaledGeometricMoments.h  ZernikeDescriptor.h  ZernikeMoments.h
src/: bindings.cpp
src/pyzernike/: __init__.py  zernike_descriptor.py
tests/: test_coefficients.py
tests/data/: cuboid_order20.npy  cuboid_order8.npy
